--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  datetime_picker_formfield: ^0.1.4
+  intl: ^0.15.7
+  image_picker: ^0.4.10
+  http: ^0.11.3
+  path_provider: ^0.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -23,6 +28,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
 
 # For information on the generic Dart part of this file, see the
