--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,13 @@ dependencies:
   image_picker: ^0.4.10
   http: ^0.11.3
   path_provider: ^0.4.1
-
+  sqflite: ^0.12.2+1
+  firebase_core: ^0.2.5
+  firebase_auth: ^0.6.5
+  google_maps_flutter: ^0.5.7
+  flutter_bloc: ^0.11.0
+  meta: ^1.1.6
+  
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
